--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0"
   },
