--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.27.2",
+    "mongodb": "^4.6.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
