--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
+    "firebase": "^9.8.2",
     "mongodb": "^4.6.0",
     "next": "12.1.4",
     "react": "18.0.0",
