--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,9 @@
     "mongodb": "^4.6.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
